--- a/BifrostFrontend/src/ModAdmin/Estado/Estado.component.html
+++ b/BifrostFrontend/src/ModAdmin/Estado/Estado.component.html
@@ -19,7 +19,7 @@
         <i class="fas fa-edit"></i>
         Editar
       </button>
-      <button class="btn-primary btn2" color="primary" (click)="EliminarEstado()">
+      <button class="btn-primary btn2" color="primary" (click)="EliminarEstado(el)">
         <i class="fas fa-trash-alt"></i>
         Eliminar
       </button>
