--- a/BifrostFrontend/src/app/app.component.html
+++ b/BifrostFrontend/src/app/app.component.html
@@ -4,7 +4,7 @@
    <mdb-card class="col-10">
         <mdb-card-body>
                 <router-outlet></router-outlet>
-                <app-DropDrag></app-DropDrag>
+                <!--<app-DropDrag></app-DropDrag>-->
         </mdb-card-body>
     </mdb-card>
 </div>
