--- a/BifrostFrontend/src/ModAdmin/Proyectos/EditarProyecto/EditarProyecto.component.html
+++ b/BifrostFrontend/src/ModAdmin/Proyectos/EditarProyecto/EditarProyecto.component.html
@@ -6,10 +6,35 @@
     <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
   </div>
   <div class="modal-body">
-    ...
+
+  <div [formGroup]="ProyectoForm">
+
+      <div class="md-form">
+        <input mdbInput type="text" id="form1" class="form-control" formControlName="Nombre" required>
+        <label for="form1" class="">Nombre</label>
+      </div>
+
+      <div class="md-form">
+        <textarea mdbInput type="text" id="form7" class="md-textarea md-textarea-auto form-control" formControlName="Descripcion"></textarea>
+        <label for="form7">Descripción</label>
+      </div>
+
+      <div class="md-form">
+        <textarea mdbInput type="text" id="form7" class="md-textarea md-textarea-auto form-control" formControlName="Url"></textarea>
+        <label for="form7">Url</label>
+      </div>
+
+    </div>
+
+    <div>
+      Form Status: {{ ProyectoForm.status }} - Form Valid: {{ ProyectoForm.valid }} - {{SaveButtonEst}}
+      <br>
+      From value: {{ this.ProyectoForm.value | json }}
+    </div>
+    
   </div>
   <div class="modal-footer">
-    <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="EditarProyecto.hide()" mdbWavesEffect>Close</button>
-    <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Save changes</button>
+    <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="EditarProyecto.hide()" mdbWavesEffect>Cerrar</button>
+    <button type="button" mdbBtn color="primary" class="relative waves-light" [disabled]="SaveButtonEst" (click)="Actualizar()" mdbWavesEffect>Actualizar</button>
   </div>
 </div>
