Funcionamiento en Role, TipoCliente

--- a/BifrostFrontend/src/Componentes/Navbar/Navbar.component.html
+++ b/BifrostFrontend/src/Componentes/Navbar/Navbar.component.html
@@ -1,6 +1,14 @@
 <nav class="nav grey lighten-4 py-4">
-    <a class="nav-link active" [routerLink]="['Proyectos']">Proyectos</a>
-    <a class="nav-link"  [routerLink]="['Estado']">Estado</a>
-    <a class="nav-link" [routerLink]="['/']">Link</a>
+    <a class="nav-link" [routerLink]="['Estado']">Estado</a>
+    <a class="nav-link disabled" [routerLink]="['Acceso']">Acceso</a>
+    <a class="nav-link" [routerLink]="['Proyectos']">Proyectos</a>
+    <a class="nav-link" [routerLink]="['Role']">Role</a>
+    <a class="nav-link" [routerLink]="['TipoCliente']">TipoCliente</a>
+    <a class="nav-link disabled" [routerLink]="['Usuario']">Usuario</a>
+    <a class="nav-link disabled" [routerLink]="['RoleAcceso']">RoleAcceso</a>
+    <a class="nav-link disabled" [routerLink]="['UsrProyecto']">UsrProyecto</a>
+    <a class="nav-link disabled" [routerLink]="['UsrRole']">UsrRole</a>
+    <a class="nav-link disabled" [routerLink]="['Cliente']">Cliente</a>
+    <a class="nav-link disabled" [routerLink]="['/']">Link</a>
     <a class="nav-link disabled" href="#">Disabled</a>
 </nav>
