--- a/BifrostFrontend/src/ModAdmin/Roles/Roles.component.html
+++ b/BifrostFrontend/src/ModAdmin/Roles/Roles.component.html
@@ -1,3 +1,29 @@
-<p>
-  Roles works!
-</p>
+<button class="btn-primary btn2" color="primary" (click)="CrearRoleModal()">
+  <i class="fas fa-plus"></i>
+  Crear
+</button>
+<br>
+<table mdbTable striped="true">
+<thead>
+  <tr>
+    <th *ngFor="let head of _roleHead" scope="col">{{head}} </th>
+  </tr>
+</thead>
+<tbody>
+  <tr mdbTableCol *ngFor="let el of _roleContent">
+    <th scope="row">{{el.id}}</th>
+    <td>{{el.Nombre}}</td>
+    <td>{{el.Descripcion}}</td>
+    <td>
+      <button class="btn-primary btn2" color="primary" (click)="EditarRoleModal(el)">
+        <i class="fas fa-edit"></i>
+        Editar
+      </button>
+      <button class="btn-primary btn2" color="primary" (click)="EliminarRole(el)">
+        <i class="fas fa-trash-alt"></i>
+        Eliminar
+      </button>
+    </td>
+  </tr>
+</tbody>
+</table> 
